--- a/5.6/mom.css
+++ b/5.6/mom.css
@@ -1,7 +1,7 @@
 *{margin: 0;
     padding: 0;}
     
-    
+    .fa-solid{color: red;}
     #header{
         background-color: white;
         border-bottom:1px solid lightgray;
@@ -52,52 +52,15 @@
       }
     
     
-    .mainp{
-        width: 100%;
-        height: 1000px;
-        border: solid 2px rgb(109, 101, 101);
-        background-color: rgba(185, 185, 184, 0.836);
-    }
-    
-    .mainp img{position: relative;
-    top:100px;
-    left: 20%;}
     
     
-    .maintext{position: relative;
-    left: 40%;
-    top:20px;
-    font-size: 50px;
-    color: rgb(45, 45, 88);
-    text-shadow: 5px 5px 10px;
-    
-    }
-    
-    
-    .text333{
-    width: 700px;
-    height: 800px;
-    text-align: center;
-    position: relative;
-    left: 50%;
-    bottom:70%;
-    padding-top: 20px;
-    color: rgb(45, 45, 88);
-    
-    }
-    
-    .text444{padding-top: 30px;
-        font-weight: bold;
-        font-size: 25px;
-    
-    }
-    
+
     .ff{display: flex;
     justify-content: center;
     width: 90%;
 position: relative;
 left: 5%;
-background-image: url(/프로필사진/엄마사진밑배경.jpg);
+background-image: url(/엄마배경화면1.jpg);
 background-size: cover;
     
     }
@@ -139,6 +102,8 @@ background-size: cover;
     .inner{width: 100vw; 
     float: left;
     text-align: center;
+    background-image: url(/bg4.jpg);
+    background-size: cover;
     
     
     }
@@ -158,7 +123,7 @@ background-size: cover;
         list-style: none;}
     
     
-    .btm_0{background-color:rgba(185, 194, 233, 0.212);
+    .btm_0{background-color:rgba(167, 172, 196, 0.212);
     }
     
     
@@ -202,10 +167,11 @@ background-size: cover;
     .info{width: 90%;
     height: 1300px;
     border: solid 2px rgb(196, 180, 180);
-    background-image: url(/프로필사진/엄마프로필배경.jpg);
+    background-image: url(/엄마배경화면2222.jpg);
     background-size: cover;
     position: relative;
-    margin: 0 auto;}
+    margin: 0 auto;
+    }
     
     .info img{position: relative;
     left: 10%;
@@ -215,18 +181,21 @@ background-size: cover;
     
     .info_text{text-align: center;
     position: relative;
-    bottom: 70%;
+    bottom: 73%;
     font-weight: bold;
     font-size: 90px;
-    color: rgb(233, 229, 230);
+    color: rgb(228, 174, 57);
+    text-shadow: 5px 5px 15px rgb(202, 150, 82);
     }
     
     .infott{width: 30%;
     height: 65%;
     position: relative;
     left: 42%;
-    color: rgb(245, 244, 244);
-    font-size: 35px;
-    bottom: 65%;
-    font-weight: bold;
-    text-shadow: 5px 5px 15px black;}
+    color: rgb(41, 38, 34);
+    font-size:35px;
+    bottom: 68%;
+    text-shadow: 5px 5px 15px white;
+    
+font-family: 'Square Peg', cursive;
+font-family: 'Do Hyeon', sans-serif;}
