--- a/5.6/sister.css
+++ b/5.6/sister.css
@@ -1,6 +1,7 @@
 *{margin: 0;
     padding: 0;}
-    
+
+.fa-solid{color: red;}
     
     #header{
         background-color: white;
@@ -52,27 +53,7 @@
       }
     
     
-    .mainp{
-        width: 100%;
-        height: 1000px;
-        border: solid 2px rgb(109, 101, 101);
-        background-color: rgba(185, 185, 184, 0.836);
-    }
-    
-    .mainp img{position: relative;
-    top:100px;
-    left: 20%;}
-    
-    
-    .maintext{position: relative;
-    left: 40%;
-    top:20px;
-    font-size: 50px;
-    color: rgb(45, 45, 88);
-    text-shadow: 5px 5px 10px;
-    
-    }
-    
+  
     
     .text333{
     width: 700px;
@@ -138,6 +119,7 @@
     .inner{width: 100vw; 
     float: left;
     text-align: center;
+   
     
     
     }
@@ -217,16 +199,17 @@
     bottom: 70%;
     font-weight: bold;
     font-size: 90px;
-    color: rgb(216, 116, 116)
+    color: rgb(216, 116, 116);
+    text-shadow: 5px 5px 15px rgb(240, 142, 142);
     }
     
     .infott{width: 30%;
     height: 65%;
     position: relative;
     left: 42%;
-    color: rgb(241, 95, 95);
+    color: rgb(110, 61, 61);
     font-size: 35px;
     bottom: 65%;
 
-    font-weight: bold;
-    text-shadow: 5px 5px 15px rgb(240, 111, 111);}
+    font-family: 'Do Hyeon', sans-serif;
+    text-shadow: 5px 5px 15px rgb(236, 118, 118);}
