--- a/5.6/dad.css
+++ b/5.6/dad.css
@@ -110,15 +110,15 @@ float: left;
 text-align: center;
 background-image: url(/bg3.jpg);
 background-size: cover;
-
+height: 100%;
 
 }
 
 .inner img{
     width: 80vw;
-    margin-top: 20px;
+    margin-top: px;
     height: 45vw;
-    border: soli 5px rgb(91, 86, 95);  
+     
        
 }
 
@@ -142,16 +142,18 @@ background-size: cover;
     
 }
 
-.bt1{ background-color:  rgb(0, 0, 2);
-width: 70px;
-height: 10px;
-border-radius: 20px 50%;
+
+.bt1{ background-color:rgb(0, 0, 2);
+    width: 70px;
+    height: 10px;
+    border-radius: 20px 50%;
 color:rgba(2, 6, 241, 0);
 opacity: 0.7;
 
 
+
 }
-.bt2{ background-color: rgb(0, 0, 2);
+.bt2{ background-color:rgb(0, 0, 2);
    
     width: 70px;
     height: 10px;
@@ -159,7 +161,7 @@ opacity: 0.7;
     color: rgba(10, 97, 212, 0);
     opacity: 0.7;}
 
-.bt3 {background-color:   rgb(0, 0, 2);
+.bt3 {background-color:rgb(0, 0, 2);
     width: 70px;
     height: 10px;
     border-radius: 20px 50%;
