--- a/5.6/까미.css
+++ b/5.6/까미.css
@@ -126,7 +126,7 @@
     
     .inner img{
         width: 80vw;
-        margin-top: 20px;
+        
         height: 45vw;
         border: soli 5px rgb(91, 86, 95);  
            
@@ -136,7 +136,8 @@
         padding-left: 20px;
         display: flex;
         justify-content: center;
-        list-style: none;}
+        list-style: none;
+        background-color: rgb(219, 230, 226);}
     
     
     .btm_0{background-color:rgba(162, 166, 182, 0.212);
