--- a/5.6/진한.css
+++ b/5.6/진한.css
@@ -128,7 +128,7 @@ left: 5%;
     
     .inner img{
         width: 80vw;
-        margin-top: 20px;
+       
         height: 45vw;
         border: soli 5px rgb(91, 86, 95);  
            
@@ -138,7 +138,8 @@ left: 5%;
         padding-left: 20px;
         display: flex;
         justify-content: center;
-        list-style: none;}
+        list-style: none;
+        background-color: rgb(219, 230, 226);}
     
     
     .btm_0{background-color:rgba(162, 166, 182, 0.212);
